--- a/geek-m/public/index.html
+++ b/geek-m/public/index.html
@@ -13,6 +13,21 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <style>
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    #root {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+  </style>
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,8 +43,6 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!-- 字体图标地址： -->
-  <script src="//at.alicdn.com/t/font_2503709_i408x28a4zp.js"></script>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
